[package]
name = "sphrs2d"
version = "0.1.0"
authors = ["Andreas Reich <r_andreas2@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5.1"
rayon = "1.3.0"
cgmath = {version= "0.17", features=["mint"]}