[package]
name = "sphrs2d"
version = "0.1.0"
authors = ["Andreas Reich <r_andreas2@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 3
overflow-checks = true

[dependencies]
ggez = "0.5.1"
rand = "0.7.3"
rayon = "1.3.0"
cgmath = { git = "https://github.com/rustgd/cgmath", rev="50a345b", features=["mint", "rand"] }

[dev-dependencies]
more-asserts = "0.2.1"