[package]
name = "yasph2d"
version = "0.1.0"
authors = ["Andreas Reich <r_andreas2@web.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [profile.dev.package."*"]
# opt-level = 3
# overflow-checks = true

[dependencies]
ggez = "0.7.0"
rand = {version="0.8.4", features=["small_rng"]}
rayon = "1.5.1"
cgmath = { version="0.18.0", features=["mint", "rand"] }
microprofile = { git = "https://github.com/jonasmr/microprofile-rust.git", rev="37f5844" } #, features = ["disabled"] }

[dev-dependencies]
more-asserts = "0.2.2"
criterion = "0.3.5"

[[bench]]
name = "bench_main"
harness = false
